--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 
 <body>
-    <button id="glavni"><span>Click if you dare</span></button>
+    <h1> AUDI</h1>
+    <div class="plast1"></div>
+    <button class="button1"> Interior</button>
+    <button class="button"> Vozna</button>
+    <button class="button1"> Interior</button>
+    <button class="button"> Vozna</button>
+    <div class="plast3"></div>
+    <div class="plast2"></div>
+    <button class="button"> Vozna</button>
+    
+    
 
 <script src="ziga.js">
 
